# Deep-Q-Learning-for-Hungry-Geese

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
config/: env_config.yaml  model_config.yaml
docs/: Makefile  conf.py  make.bat
notebooks/: Hungry Geese.ipynb
src/: inference.py  train.py  utils.py
src/data/: data.py  features.py
src/models/: model.py
src/visualization/: visualize.py
