[tool.poetry]
name = "hungry-geese"
version = "0.1.0"
description = ""
authors = ["Max Kokot <max.kokot.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
kaggle_environments = "^1.16"
lightning = "^2.4.0"
numpy = "^1.26.4"
matplotlib = "^3.5.3"
pandas = "^2.1.4"
seaborn = "^0.13.2"
torch = { version = "2.3.1", source="torch"}
torchaudio = { version = "2.3.1", source="torch"}
torchvision = { version = "0.18.1", source="torch"}
tensorboard = "^2.18.0"
flake8 = "^7.1.1"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

